SFUSA/force-app/main/default/objects/Barrel_Number__c/fields/Product_Type__c.field-meta.xml
<CustomField>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Type</valueSetName>
        </valueSet>
    </CustomField>